Adds cpggen
Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>